--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -31,6 +31,8 @@
     "sass-loader": "^7.1.0"
   },
   "dependencies": {
+    "auth": "0.0.9",
+    "firebase": "^6.1.1",
     "js-yaml": "^3.13.1",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
