--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -34,6 +34,7 @@
     "auth": "0.0.9",
     "firebase": "^6.1.1",
     "js-yaml": "^3.13.1",
+    "logrocket": "^1.0.0",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
     "preact-material-components": "^1.4.3",
