--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -8,6 +8,8 @@
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
+    "deploy": "preact build && aws s3 sync build/ s3://spages.mobileposse.com/",
+    "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
     "lint": "eslint src"
   },
   "eslintConfig": {
@@ -28,7 +30,8 @@
     "if-env": "^1.0.0",
     "node-sass": "^4.12.0",
     "preact-cli": "^2.0.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "sw-precache": "^5.2.1"
   },
   "dependencies": {
     "auth": "0.0.9",
@@ -39,6 +42,11 @@
     "preact-compat": "^3.17.0",
     "preact-material-components": "^1.4.3",
     "preact-render-to-string": "^4.1.0",
-    "preact-router": "^2.5.5"
+    "preact-router": "^2.5.5",
+    "react-responsive-carousel": "^3.1.49",
+    "s3-deploy": "^1.3.0",
+    "smoothslider": "^0.1.0",
+    "stored-component": "^0.1.0",
+    "unistore": "^3.4.1"
   }
 }
