--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -10,6 +10,7 @@
     "dev": "preact watch",
     "deploy": "preact build && aws s3 sync build/ s3://spages.mobileposse.com/",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
+    "aws-clear":"aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src"
   },
   "eslintConfig": {
