--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -10,16 +10,17 @@
     "dev": "preact watch",
     "deploy": "preact build && aws s3 sync build/ s3://spages.mobileposse.com/",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
-    "aws-clear":"aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
+    "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor",
     "rules": {
       "no-unused-vars": "warn",
-      "react/sort-comp": "off",
+      "react/sort-comp": "on",
       "lines-around-comment": "off",
-      "react/prefer-stateless-function": "off"
+      "react/prefer-stateless-function": "off",
+      "react/jsx-no-bind": "off"
     }
   },
   "eslintIgnore": [
@@ -44,6 +45,7 @@
     "preact-material-components": "^1.4.3",
     "preact-render-to-string": "^4.1.0",
     "preact-router": "^2.5.5",
+    "react-notify-toast": "^0.5.0",
     "react-responsive-carousel": "^3.1.49",
     "s3-deploy": "^1.3.0",
     "smoothslider": "^0.1.0",
