--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -50,6 +50,7 @@
     "s3-deploy": "^1.3.0",
     "smoothslider": "^0.1.0",
     "stored-component": "^0.1.0",
-    "unistore": "^3.4.1"
+    "unistore": "^3.4.1",
+    "webfontloader": "^1.6.28"
   }
 }
