--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -9,6 +9,7 @@
     "serve": "preact build && preact serve",
     "dev": "preact watch",
     "deploy": "preact build && aws s3 sync build/ s3://spages.mobileposse.com/",
+    "demo": "npm run deploy && npm run aws-clear/",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
     "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src"
@@ -27,30 +28,32 @@
     "build/*"
   ],
   "devDependencies": {
-    "eslint": "^4.5.0",
-    "eslint-config-synacor": "^1.1.0",
+    "file-loader": "^4.0.0",
     "if-env": "^1.0.0",
     "node-sass": "^4.12.0",
     "preact-cli": "^2.0.0",
     "sass-loader": "^7.1.0",
-    "sw-precache": "^5.2.1"
+    "standard": "^12.0.1",
+    "sw-precache": "^5.2.1",
+    "url-loader": "^2.0.1",
+    "webpack": "^4.35.0"
   },
   "dependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-synacor": "^1.1.2",
     "auth": "0.0.9",
-    "firebase": "^6.2.0",
+    "firebase": "^6.2.3",
     "js-yaml": "^3.13.1",
-    "logrocket": "^1.0.0",
     "preact": "^8.2.1",
     "preact-compat": "^3.19.0",
     "preact-material-components": "^1.4.3",
     "preact-render-to-string": "^4.1.0",
     "preact-router": "^2.5.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-notify-toast": "^0.5.0",
     "react-responsive-carousel": "^3.1.49",
     "s3-deploy": "^1.3.0",
-    "smoothslider": "^0.1.0",
-    "stored-component": "^0.1.0",
-    "unistore": "^3.4.1",
-    "webfontloader": "^1.6.28"
+    "smoothslider": "^0.1.0"
   }
 }
