--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -31,7 +31,7 @@
     "file-loader": "^4.0.0",
     "if-env": "^1.0.0",
     "node-sass": "^4.12.0",
-    "preact-cli": "^2.0.0",
+    "preact-cli": "^2.2.1",
     "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
     "sw-precache": "^5.2.1",
@@ -39,9 +39,9 @@
     "webpack": "^4.35.0"
   },
   "dependencies": {
+    "auth": "0.0.9",
     "eslint": "^4.19.1",
     "eslint-config-synacor": "^1.1.2",
-    "auth": "0.0.9",
     "firebase": "^6.2.3",
     "js-yaml": "^3.13.1",
     "preact": "^8.2.1",
@@ -54,6 +54,7 @@
     "react-notify-toast": "^0.5.0",
     "react-responsive-carousel": "^3.1.49",
     "s3-deploy": "^1.3.0",
-    "smoothslider": "^0.1.0"
+    "smoothslider": "^0.1.0",
+    "webpack-dev-server": "^3.7.2"
   }
 }
