--- a/games_poc/package.json
+++ b/games_poc/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "games_poc",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
@@ -37,7 +37,8 @@
     "standard": "^12.0.1",
     "sw-precache": "^5.2.1",
     "url-loader": "^2.0.1",
-    "webpack": "^4.35.0"
+    "webpack": "^4.35.0",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "auth": "0.0.9",
@@ -54,7 +55,6 @@
     "react-notify-toast": "^0.5.0",
     "react-responsive-carousel": "^3.1.49",
     "s3-deploy": "^1.3.0",
-    "smoothslider": "^0.1.0",
-    "webpack-dev-server": "^3.7.2"
+    "smoothslider": "^0.1.0"
   }
 }
